(executable
 (public_name kind2)
 (libraries kind2dev)
 (modules kind2)
 (flags (:standard (:include linking-flags.sexp)))
)

(rule
  (with-stdout-to linking-flags.sexp
    (run ../scripts/gen-linking-flags.sh %{env:LINKING_MODE=dynamic} %{ocaml-config:system})))

(library
 (name kind2dev)
 (libraries dune-build-info num str threads yojson zmq menhirLib)
 (modules
  (:standard \ C2Icnf horn kind2 lustreChecker nusmv oldParser testgen testgenLib
    testgenStrategies threadtest polltest))
 (modules_without_implementation solverSig)
 (wrapped false))

(include_subdirs unqualified)

(env
 (dev
  (flags
   (:standard -warn-error -A -w A-4-9-29-40-41-42-44-48-67-70))))
